[gd_scene load_steps=8 format=3 uid="uid://b7m7sayt8l1qt"]

[ext_resource type="Script" uid="uid://dx3te7mqgnss3" path="res://scripts/inicio.gd" id="1_4xtsl"]
[ext_resource type="PackedScene" uid="uid://djxt3uu0e0te5" path="res://scenes/escenario.tscn" id="1_i3824"]
[ext_resource type="FontFile" uid="uid://b2lioee1ml5yc" path="res://assets/fonts/Fredoka-VariableFont_wdth,wght.ttf" id="2_4vxdk"]
[ext_resource type="Texture2D" uid="uid://cc5e6fi4qxnpy" path="res://assets/images/banner.png" id="5_4xtsl"]
[ext_resource type="Texture2D" uid="uid://c4ktswdgn3op7" path="res://assets/images/upg_logo.png" id="5_se2mk"]

[sub_resource type="FontVariation" id="FontVariation_q3pj3"]
base_font = ExtResource("2_4vxdk")
variation_embolden = 0.5

[sub_resource type="Theme" id="Theme_i3824"]
default_font = SubResource("FontVariation_q3pj3")

[node name="Inicio" type="Node3D"]
script = ExtResource("1_4xtsl")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.63808274, 0, 0.76996785, 0, 1, 0, -0.76996785, 0, 0.63808274, 62.0105, 17.092184, 144.40764)

[node name="Escenario" parent="." instance=ExtResource("1_i3824")]

[node name="CanvasLayerInicio" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayerInicio"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_i3824")

[node name="Botones" type="VBoxContainer" parent="CanvasLayerInicio/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.6
anchor_right = 0.66
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BtnIniciar" type="Button" parent="CanvasLayerInicio/Control/Botones"]
layout_mode = 2
text = "Iniciar Juego"

[node name="HSeparator" type="HSeparator" parent="CanvasLayerInicio/Control/Botones"]
layout_mode = 2

[node name="BtnSalir" type="Button" parent="CanvasLayerInicio/Control/Botones"]
layout_mode = 2
text = "Salir"

[node name="UpgLogo" type="TextureRect" parent="CanvasLayerInicio/Control"]
texture_filter = 6
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -92.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_se2mk")
expand_mode = 5
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="CanvasLayerInicio/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -332.0
offset_top = 15.0
offset_right = 332.0
offset_bottom = 285.0
grow_horizontal = 2
texture = ExtResource("5_4xtsl")
stretch_mode = 5

[connection signal="pressed" from="CanvasLayerInicio/Control/Botones/BtnIniciar" to="." method="_on_btn_iniciar_pressed"]
[connection signal="pressed" from="CanvasLayerInicio/Control/Botones/BtnSalir" to="." method="_on_btn_salir_pressed"]
